// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced Slides Feature >  Show Debug Grid 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## My Slide

This slide shows the debug view feature


<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 10%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 20%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 30%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 40%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 50%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 60%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 70%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 80%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 90%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 10%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 20%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 30%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 40%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 50%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 60%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 70%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 80%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
<div class=\\"\\" style=\\"border: thin dotted blue; box-sizing: border-box; position: absolute; left: 90%; top: 0%; height: 100%; width: 10%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >
</div>
</div>"
`;

exports[`Extended Markdown Syntax >  Block Comments 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"block\\">

#### Header
_and_
Paragraph content
*in same block*

</div>
</div>
---
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

no color

<div class=\\"block\\">

<!-- .element: style=\\"background-color: red\\" -->

everything inside this block has red background color

<div class=\\"block\\">

<!-- .element: style=\\"background-color: blue\\" -->

blue

</div>



red

</div>



no color
</div>"
`;

exports[`Extended Markdown Syntax >  Chart support > Extended Settings 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">
<canvas style=\\"max-height:700px\\" data-chart=\\"bar\\" >
<!--
{\\"data\\":{\\"datasets\\":[{\\"data\\":[1,2,3,4,5,6,7,8,9],\\"label\\":\\"Title 1\\",\\"backgroundColor\\":\\"#4285f4\\"},{\\"data\\":[5,4,3,2,1,0,-1,-2,-3],\\"label\\":\\"Title 2\\",\\"backgroundColor\\":\\"#ea4335\\"}],\\"labels\\":[\\"Monday\\",\\"Tuesday\\",\\"Wednesday\\",\\"Thursday\\",\\"Friday\\",\\"Saturday\\",\\"Sunday\\",\\"next Week\\",\\"next Month\\"]},\\"options\\":{\\"elements\\":{\\"bar\\":{\\"spanGaps\\":true,\\"tension\\":0.5}},\\"scales\\":{\\"y\\":{\\"beginAtZero\\":true,\\"stacked\\":true},\\"x\\":{\\"stacked\\":true}},\\"plugins\\":{\\"legend\\":{\\"display\\":false,\\"position\\":\\"left\\"}}}}-->
</canvas>
</div>"
`;

exports[`Extended Markdown Syntax >  Chart support > Illegal Input 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

\`\`\`chart
    type: bar
    labels: [Monday,Tuesday,Wednesday,Thursday,Friday, Saturday, Sunday, \\"next Week\\", \\"next Month\\"]
    series:
      - title: Title 1
        data: [1,2,3,4,5,6,7,8,9]
      - title: Title 2
        data: [5,4,3,2,1,0,-1,-2,-3]
\`
</div>"
`;

exports[`Extended Markdown Syntax >  Chart support 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">
<canvas style=\\"max-height:700px\\" data-chart=\\"bar\\" >
<!--
{\\"data\\":{\\"datasets\\":[{\\"data\\":[1,2,3,4,5,6,7,8,9],\\"label\\":\\"Title 1\\",\\"backgroundColor\\":\\"#4285f4\\"},{\\"data\\":[5,4,3,2,1,0,-1,-2,-3],\\"label\\":\\"Title 2\\",\\"backgroundColor\\":\\"#ea4335\\"}],\\"labels\\":[\\"Monday\\",\\"Tuesday\\",\\"Wednesday\\",\\"Thursday\\",\\"Friday\\",\\"Saturday\\",\\"Sunday\\",\\"next Week\\",\\"next Month\\"]},\\"options\\":{\\"elements\\":{\\"bar\\":{}}}}-->
</canvas>
</div>"
`;

exports[`Extended Markdown Syntax >  Default Background 1`] = `
"<!-- .slide: class=\\"drop\\" data-background-image=\\"/documentation/Image.jpg\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## Slide with default Background
</div>
---
<!-- .slide: class=\\"drop\\" data-background-image=\\"/documentation/Slide.jpg\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## Slide with overloaded Background
</div>
---
<!-- .slide: class=\\"titleSlide drop\\" data-background-image=\\"/documentation/Image.jpg\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## Slide without overloaded Background
</div>"
`;

exports[`Extended Markdown Syntax >  Element Annotations 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

text with border <!-- .element: class=\\"with-border\\" -->

text with background <!-- .element: style=\\"background: blue\\" -->

text with attribute <!-- .element: data-toggle=\\"modal\\" -->
</div>"
`;

exports[`Extended Markdown Syntax >  Excalidraw support 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

#### Excalidraw support

<img src=\\"path/to/Sample.excalidraw.svg\\" alt=\\"\\" style=\\"width: 100px; object-fit: fill\\">

<img src=\\"path/to/Sample.excalidraw.svg\\" alt=\\"\\" style=\\"width: 300px; height: 400px; object-fit: fill\\">
</div>"
`;

exports[`Extended Markdown Syntax >  Fragmented list 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Unordered list

- First
- Second
- Third
</div>
---
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Fragmented unordered list

- Permanent
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"1\\" -->First
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"2\\" -->Second
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"3\\" -->Third
</div>
---
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Fragmented unordered list with ignored code block

- First
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"1\\" -->Second

\`\`\`diff
- ignored block text 1
+ ignored block text 2
\`\`\`
</div>
---
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Ordered list

1. First
2. Second
3. Third
</div>
---
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Fragmented ordered list

1. Permanent
1. &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"1\\" -->Second
1. &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"2\\" -->Third
1. &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"3\\" -->Fourth
</div>"
`;

exports[`Extended Markdown Syntax >  Fragments 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

Fade in <!-- .element: class=\\"fragment\\" -->

Fade out <!-- .element: class=\\"fragment fade-out\\" -->

Highlight red <!-- .element: class=\\"fragment highlight-red\\" -->

Fade in, then out <!-- .element: class=\\"fragment fade-in-then-out\\" -->

Slide up while fading in <!-- .element: class=\\"fragment fade-up\\" -->
</div>
---
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

- Permanent item
- Appear Fourth <!-- .element: class=\\"fragment\\" data-fragment-index=\\"4\\" -->
- Appear Third <!-- .element: class=\\"fragment\\" data-fragment-index=\\"3\\" -->
- Appear Second <!-- .element: class=\\"fragment\\" data-fragment-index=\\"2\\" -->
- Appear First <!-- .element: class=\\"fragment\\" data-fragment-index=\\"1\\" -->
</div>"
`;

exports[`Extended Markdown Syntax >  Inline Styling 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<style>
.with-border{
	border: 1px solid red;
}
</style>

styled text <!-- .element: class=\\"with-border\\" -->
</div>"
`;

exports[`Extended Markdown Syntax >  Slide Annotations 1`] = `
"<!-- .slide: style=\\"background-color: coral\\" class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Header with coral background color

Paragraph has coral background color, too!
</div>
---
<!-- .slide: style=\\"background-color: green\\" class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

- All Bullet points
- have green
- background color
</div>"
`;

exports[`Extended Markdown Syntax >  Slide Backgrounds 1`] = `
"<!-- .slide: class=\\"drop\\" data-background=\\"aquamarine\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## Slide with text based background
</div>
---
<!-- .slide: class=\\"drop\\" data-background=\\"#ff0000\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## Slide with hex based background
</div>
---
<!-- .slide: class=\\"drop\\" data-background=\\"rgb(70, 70, 255)\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## Slide with rgb based background
</div>
---
<!-- .slide: class=\\"drop\\" data-background=\\"hsla(315, 100%, 50%, 1)\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## Slide with hsl based background
</div>
---
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Slide without background
</div>
---
<!-- .slide: class=\\"drop\\" data-background-image=\\"https://picsum.photos/seed/picsum/800/600\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## Slide with image background
</div>
---
<!-- .slide: class=\\"drop\\" data-background-image=\\"/documentation/Image.jpg\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## Slide with image background #2
</div>
---
<!-- .slide: class=\\"drop\\" data-background-image=\\"https://picsum.photos/seed/picsum/800/600\\" data-background-opacity=\\"0.5\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## with opacity

0.5 ≙ 50% opacity
</div>
---
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## More options:

See [reveal backgrounds](https://revealjs.com/backgrounds/)
</div>"
`;

exports[`Extended Markdown Syntax >  Speaker Notes 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

## My Slide

This is part of my Presentation
</div>

note: this is not! Only the speaker might see this text.

- and this bulletpoint
- or this picture

<img src=\\"https://picsum.photos/id/1005/250/250\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
"
`;

exports[`Extended Markdown Syntax > Horizontal / Vertical Slides 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Slide 1
</div>
---
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Slide 2.1
</div>
--
<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

# Slide 2.2
</div>"
`;
